--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
       <li>How to use cloud-based editors</li>
       <li>How HTTP works</li>
       <li>How to write readable code</li>
-      <li>...and more.</li>
+      <li>...and more if you desire</li>
     </ul>
 
     <p>We offer an open source curriculum that combines active class lectures and office hours with experienced programmers. Additionally, get hands-on experience by helping local non-profits.</p>
