--- a/static/index.html
+++ b/static/index.html
@@ -27,6 +27,7 @@
       <li>How to use cloud-based editors</li>
       <li>How HTTP works</li>
       <li>How to write readable code</li>
+      <li>Object-Oriented programming</li>
       <li>...and more if you desire</li>
     </ul>
 
