--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,8 @@
 
     <p>The Free Education Society is in a private beta. Keep an eye out though, because we intend to give a everyone a free education.</p>
   </div>
+
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
 
 </html>
