--- a/static/index.html
+++ b/static/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:ng="http://angularjs.org" ng-app="main">
 <head>
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css"
         rel="stylesheet">
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css"
         rel="stylesheet">
-  <script src="//code.jquery.com/jquery-2.1.1.min.js"</script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+  <link href="/static/styles.css" rel="stylesheet">
   <title>Free Education Society</title>
 </head>
 
 <body class="container">
+  <div class="col-md-2 link-sidebar">
+    <ul class="bulletless">
+      <li><a href="/">Overview</a></li>
+      <li><a href="curriculum/course-list">Curriculum</a></li>
+    </ul>
+  </div>
+  
   <div class="col-md-7">
     <h1>Free Education Society <br/>
-    <small>Want to learn to program but don't have the money or time?</small></h1>
-
-    <p>College is a huge investment that not everyone can afford. Hacker bootcamps cost thousands of dollars and require a time investment of up to 40 hours a week. Is it any wonder that only a privileged few can become programmers?</p>
-
-    <p>We've designed our program specifically for adults who have other things to do in their lives. Most adults can't quit their jobs or neglect their kids to learn to program. And they don't have the 5 or 6 years it takes to get a college degree.</p>
-
-    <p>We will teach you:</p>
-    <ul>
-      <li>Using git for version control</li>
-      <li>How to do code reviews</li>
-      <li>How to use cloud-based editors</li>
-      <li>How HTTP works</li>
-      <li>How to write readable code</li>
-      <li>Object-Oriented programming</li>
-      <li>...and more if you desire</li>
-    </ul>
-
-    <p>We offer an open source curriculum that combines active class lectures and office hours with experienced programmers. Additionally, get hands-on experience by helping local non-profits.</p>
-
-    <p>Learn a little bit or a lot and do so at your own pace on your own time.</p>
-
-    <p>The Free Education Society is in a private beta. Keep an eye out though, because we intend to give a everyone a free education.</p>
-
-     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+      <small>Want to learn to program but don't have the money or time?</small></h1>
+      <div style="height: 50px"></div>
+    <ng-view></ng-view>
   </div>
+
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"</script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js" ng-app="main"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
+  <script src="/static/main.js"></script>
+  <script src="/static/route.js"></script>
+  </body>
 </html>
