Remove links temporarily.

--- a/static/index.html
+++ b/static/index.html
@@ -11,12 +11,12 @@
 
 <body class="container">
   <div class="col-md-2 link-sidebar">
-    <ul class="bulletless">
-      <li><a href="/">Overview</a></li>
-      <li><a href="curriculum/course-list">Curriculum</a></li>
-    </ul>
+    <!--<ul class="bulletless">-->
+    <!--  <li><a href="/">Overview</a></li>-->
+    <!--  <li><a href="curriculum/course-list">Curriculum</a></li>-->
+    <!--</ul>-->
   </div>
-  
+
   <div class="col-md-7">
     <h1>Free Education Society <br/>
       <small>Want to learn to program but don't have the money or time?</small></h1>
