--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
     <ng-view></ng-view>
   </div>
 
-  <script src="//code.jquery.com/jquery-2.1.1.min.js"</script>
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js" ng-app="main"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
