--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
   <div class="col-md-7">
     <h1>Free Education Society <br/>
       <small>Want to learn to program but don't have the money or time?</small></h1>
-      <div style="height: 50px"></div>
+      <div class="spacer-md"></div>
     <ng-view></ng-view>
   </div>
 
