--- a/static/index.html
+++ b/static/index.html
@@ -11,10 +11,11 @@
 
 <body class="container">
   <div class="col-md-2 link-sidebar">
-    <!--<ul class="bulletless">-->
-    <!--  <li><a href="/">Overview</a></li>-->
-    <!--  <li><a href="curriculum/course-list">Curriculum</a></li>-->
-    <!--</ul>-->
+    <ul class="bulletless">
+      <li><a href="/">Overview</a></li>
+      <li><a href="/about/principles">Principles</a></li>
+      <li><a href="/about/requirements">Requirements</a></li>
+    </ul>
   </div>
 
   <div class="col-md-7">
