Moving Creative Commons blurb to the bottom of every file.

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,9 @@
     <h1>Free Education Society <br/>
       <small>Want to learn to program but don't have the money or time?</small></h1>
       <div class="spacer-md"></div>
-    <ng-view></ng-view>
+      <ng-view></ng-view>
+      <div class="spacer-sm"></div>
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
